--- a/utils/logging/log.conf
+++ b/utils/logging/log.conf
@@ -14,7 +14,7 @@ handlers=handlerConsole, handlerFile
 
 [handler_handlerConsole]
 class=StreamHandler
-level=WARNING
+level=DEBUG
 formatter=formatterConsole
 args=(sys.stdout,)
 
